FE-API 개발 및 업데이트