@@ -17,10 +17,7 @@ import org.springframework.web.client.RestTemplate;
 
 import java.net.URL;
 import java.time.LocalDateTime;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
+import java.util.*;
 
 @Service
 public class PreprocessService {
@@ -47,9 +44,9 @@ public class PreprocessService {
         String api = "http://127.0.0.1:5000/preprocess/extract/web-promotion";
 
         Map<String, String> requestBody = Map.of("html", html);
-
+        ResponseEntity<String> response = restTemplate.postForEntity(api, requestBody, String.class);
         try {
-            ResponseEntity<String> response = restTemplate.postForEntity(api, requestBody, String.class);
+
             if (!response.getStatusCode().is2xxSuccessful() || response.getBody() == null) { // 다시 확인 필요
                 throw new RuntimeException("\t\t[PreprocessService] HTML 전처리 실패: \" + response.getStatusCode()");
             }
@@ -61,7 +58,7 @@ public class PreprocessService {
             );
 
             System.out.println("\t\t[PreprocessService] 전처리 결과: " + content);
-            if (content == "null" || content == null) {
+            if (Objects.equals(content, "null") || content == null) {
                 System.out.println("\t\t[PreprocessService] 마약 관련 홍보글이 아닙니다!");
                 // 해당 링크 모든 데이터 삭제됨 상태로 설정
                 setDeleted(link);
@@ -84,13 +81,22 @@ public class PreprocessService {
     // 데이터 삭제됨 상태로 변경
     private void setDeleted(String link) {
         List<Posts> posts = postsService.getPostsByLink(link);
+        LocalDateTime now = LocalDateTime.now();
         for (Posts post : posts) {
-            post.setDeleted(true);
-            post.setDeletedAt(LocalDateTime.now());
-            post.setUpdatedAt(LocalDateTime.now());
+            post.markAsDeleted(now);
             postsRepository.save(post);
         }
         System.out.println("\t\t[PreprocessService] " + posts.size() + "개의 데이터를 업데이트, 삭제 상태로 변경 완료");
+    }
+
+    /*
+     게시물이 비어있으면 false 반환
+     content가 변경되었으면 true, 아니면 false 리턴
+     */
+    private boolean isContentUpdated(List<Posts> posts, String newContent) {
+        if (posts.isEmpty()) return false;
+        Posts latestPost = posts.get(posts.size() - 1);
+        return !latestPost.getContent().equals(newContent);
     }
 
     // 데이터 업데이트
@@ -99,20 +105,25 @@ public class PreprocessService {
     private void updateData(String html, String link, String content, List<String> telegrams) {
         List<Posts> posts = postsService.getPostsByLink(link);
         for (Posts post : posts) {
-            post.setUpdatedAt(LocalDateTime.now());
-            postsRepository.save(post);
+            post.updateTimestampToNow(); // 테스트 필요
         }
         System.out.println("\t\t[PreprocessService] " + posts.size() + "개의 데이터 업데이트 시각 변경 완료");
-        if (!posts.isEmpty()) {
-            if (!posts.get(posts.size() - 1).getContent().equals(content)) { // 본문 내용이 동일하지 않으면 (테스트 완료)
-                System.out.println("\t\t[PreprocessService] 홍보글에 업데이트 사항이 있습니다");
-                saveData(html, link, content, telegrams);
-                System.out.println("\t\t[PreprocessService] 최신 데이터 저장 완료");
-                getChannelInfo(telegrams);
-            }
-        }
 
+        if (isContentUpdated(posts, content)) { // 본문 내용이 동일하지 않으면
+            System.out.println("\t\t[PreprocessService] 홍보글에 업데이트 사항이 있습니다");
+            saveData(html, link, content, telegrams);
+            System.out.println("\t\t[PreprocessService] 최신 데이터 저장 완료");
+            getChannelInfo(telegrams);
+        }
     }
+
+    // 위 메서드에서 세이브 데이터 하기 전에, 체널 비교 메서드 호출
+    // 채널 비교 메서드는 ?
+    // 리스트 비교 방법 찾아보기
+    // for문 돌면서 기존 리스트에 해당 채널이 있는지 체크하거나
+
+    // Neo4j도 여기에 끼워넣어야 함 !
+    
 
     // 링크에서 도메인 추출
     public String extractDomain(String link) {
@@ -134,20 +145,21 @@ public class PreprocessService {
     private void saveData(String html, String link, String content, List<String> telegrams) {
         htmlCrawlingService.saveHtml(html, link);
 
-        Posts post = new Posts();
-        post.setLink(link);
-        post.setTag(null);
-        post.setSiteName(extractDomain(link)); // 사이트 이름을 도메인으로 대체
-        post.setTitle(null);
-        post.setContent(content);
-        post.setPromoSiteLink(Arrays.asList(telegrams.toString()));
-        post.setPromoChannelId(Arrays.asList(telegrams.toString())); // 수정 필요
-        post.setAuthor(null);
-        post.setTimestamp(null);
-        post.setCreatedAt(LocalDateTime.now());
-        post.setUpdatedAt(LocalDateTime.now());
-        post.setDeletedAt(null);
-        post.setDeleted(false);
+        Posts post = Posts.builder()
+                .link(link)
+                .tag(null)
+                .siteName(extractDomain(link))
+                .title(null)
+                .content(content)
+                .promoSiteLink(List.of(telegrams.toString()))
+                .promoChannelId(List.of(telegrams.toString())) // 수정 필요
+                .author(null)
+                .timestamp(null)
+                .createdAt(LocalDateTime.now())
+                .updatedAt(LocalDateTime.now())
+                .deletedAt(null)
+                .deleted(false)
+                .build();
 
         postsRepository.save(post);
     } // -> 수정 예정
@@ -173,7 +185,7 @@ public class PreprocessService {
     // 2. 본문에서 텔레그램 채널 추출 시
     //  2.1. 해당 채널이 DB에 있으면 홍보글 개수 업데이트
     //  2.2. 없으면 검문 서비스 호출
-    public String htmlPreprocess(String url, String html) {
+    public void htmlPreprocess(String url, String html) {
         String api = "http://127.0.0.1:5000/preprocess/extract/web-promotion";
 
         Map<String, String> requestBody = Map.of("html", html);
@@ -197,7 +209,7 @@ public class PreprocessService {
             // Optional<Posts> existingEntry = postsRepository.findById(id); // 존재하지 않아야 실행되도록 구현됨 -> 삭제
 
             System.out.println("\t\t[PreprocessService] 전처리 결과: " + content);
-            if (content == "null" || content == null) {
+            if (Objects.equals(content, "null") || content == null) {
                 System.out.println("\t\t[PreprocessService] 마약 관련 홍보글이 아닙니다!");
                 /*
                 if (existingEntry.isPresent()) { // DB에 존재하면
@@ -233,80 +245,10 @@ public class PreprocessService {
 
                 getChannelInfo(telegrams);
             }
-            return content;
         } catch (JsonProcessingException e) {
             throw new RuntimeException("\t\t[PreprocessService] JSON 파싱 중 오류 발생: " + e.getMessage(), e);
         } catch (Exception e) {
             throw new RuntimeException("\t\t[PreprocessService] HTML 전처리 중 오류 발생: " + e.getMessage(), e);
         }
     }
-
-
-    // 아래는 직접 실행 (테스트용) / 업데이트 안 된 코드임
-    /*
-    public String postPreprocess(String url, String requestData) {
-        System.out.println(requestData);
-
-        String api = "http://127.0.0.1:5000/preprocess/extract/web-promotion";
-
-        ObjectMapper objectMapper = new ObjectMapper();
-        ObjectNode jsonNode = objectMapper.createObjectNode();
-        jsonNode.put("html", requestData);
-
-        HttpHeaders headers = new HttpHeaders();
-        headers.setContentType(MediaType.APPLICATION_JSON);
-
-        HttpEntity<String> requestEntity = new HttpEntity<>(jsonNode.toString(), headers);
-
-        ResponseEntity<String> response = restTemplate.postForEntity(api, requestEntity, String.class);
-
-        // return response.getBody(); // 기본 반환 코드 (인코딩 문제 발생)
-
-        LocalDateTime now = LocalDateTime.now();
-
-        String id = "post_" + url;
-        Posts posts;
-        Optional<Posts> existingEntry = postsRepository.findById(response.getBody());
-
-        if (!existingEntry.isPresent()) {
-            System.out.println(id + "\tPost not found");
-            posts = new Posts();
-            posts.setId(id);
-            posts.setLink(url);
-            posts.setTag("tag");
-            posts.setSiteName("site name");
-            posts.setTitle("title");
-            // posts.setPromoSiteLink("promotion site link");
-            // posts.setPromoSiteName("promo site name");
-            posts.setAuthor("author");
-            posts.setTimestamp(null);
-            posts.setCreatedAt(now);
-        } else {
-            System.out.println(id + "\tPost found");
-            posts = existingEntry.get();
-        }
-        // posts.setContent(response.getBody());
-        posts.setUpdatedAt(now);
-        // postsRepository.save(posts);
-
-        String content;
-        try {
-            JsonNode jsonNode2 = objectMapper.readTree(response.getBody()); // 파싱
-            // 필드 추출
-            content = jsonNode2.get("promotion_content").asText();
-            posts.setContent(content);
-            postsRepository.save(posts);
-            System.out.println("Successfully saved !");
-            return content;
-        } catch (Exception e) {
-            posts.setContent(response.getBody());
-            postsRepository.save(posts);
-            System.out.println("Decoding failed, saved as it.");
-            throw new RuntimeException("Failed to parse response", e);
-        }
-
-
-    }
-
-     */
 }
